Fixed $mol_check_expand_icon aligning when in table-cell;

--- a/check/expand/expand.view.css
+++ b/check/expand/expand.view.css
@@ -32,6 +32,10 @@
 [mol_check_box_icon] + div:not(:empty) {
 }
 
+[mol_check_expand_icon] {
+	vertical-align: text-top;
+}
+
 [mol_check_expand_label] {
 	margin-left: 0;
 }
